// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render as custom element 1`] = `
<DocumentFragment>
  <div
    class="css-1psxlcd"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <select
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="Input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render invalid 1`] = `
<DocumentFragment>
  <div
    class="css-px3dod"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="Input"
        type="text"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      data-testid="Input__addon-end"
    >
      <span
        data-errortext="Field invalid"
        data-testid="Input__error"
      >
        <div
          class="text-theme-danger-500 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render invalid and disabled 1`] = `
<DocumentFragment>
  <div
    class="css-1by871c"
    disabled=""
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
        data-testid="Input"
        disabled=""
        type="text"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      data-testid="Input__addon-end"
    >
      <span
        data-errortext="Field invalid and disabled"
        data-testid="Input__error"
      >
        <div
          class="text-theme-danger-500 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render when isCompact = false 1`] = `
<DocumentFragment>
  <div
    class="css-1psxlcd"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="Input"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render when isCompact = true 1`] = `
<DocumentFragment>
  <div
    class="css-6zwcjo"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="Input"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with addons 1`] = `
<DocumentFragment>
  <div
    class="css-1psxlcd"
  >
    <span>
      start
    </span>
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="Input"
        type="text"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 some-class-name"
      data-testid="Input__addon-end"
    >
      <div
        class=""
      >
        <span>
          end
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with focus 1`] = `
<DocumentFragment>
  <div
    class="css-1psxlcd"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="Input"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with suggestion 1`] = `
<DocumentFragment>
  <div
    class="invisible fixed w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="css-1psxlcd"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="Input"
        type="text"
        value=""
      />
      <span
        class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
        data-testid="Input__suggestion"
      >
        <span
          class="truncate"
        >
          suggestion
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
